k8s-manifests/application/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dvna-devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvna-devsecops
  template:
    metadata:
      labels:
        app: dvna-devsecops
    spec:
      containers:
        - name: dvna-devsecops
          image: sourabh385/dvna-devsecops:28
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 9090
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /
              port: 9090
              scheme: HTTP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
