k8s-manifests/application/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dvna-devsecops
spec:
  ports:
    - name: web
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: dvna-devsecops
  type: ClusterIP
  sessionAffinity: None
