k8s-manifests/application/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dvna-devsecops
spec:
  host: ""
  to:
    kind: Service
    name: dvna-devsecops
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
